--- a/StoryBoardApp/app/src/main/res/layout/activity_board.xml
+++ b/StoryBoardApp/app/src/main/res/layout/activity_board.xml
@@ -18,7 +18,7 @@
         android:layout_marginEnd="32dp">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/imageViewTest"
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:layout_marginTop="32dp"
