--- a/StoryBoardApp/app/src/main/res/layout/activity_write_post.xml
+++ b/StoryBoardApp/app/src/main/res/layout/activity_write_post.xml
@@ -128,7 +128,7 @@
         app:srcCompat="@drawable/tri_but" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageViewTest"
         android:layout_width="47dp"
         android:layout_height="40dp"
         app:layout_constraintBottom_toBottomOf="@+id/Add_button"
