--- a/StoryBoardApp/app/src/main/res/layout/activity_register_user.xml
+++ b/StoryBoardApp/app/src/main/res/layout/activity_register_user.xml
@@ -30,7 +30,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="86dp"
         android:layout_marginEnd="32dp"
-        android:text="Register"
+        android:text="@string/register_register"
         android:textColor="#96A7AF"
         android:textSize="32sp"
         android:textStyle="bold"
@@ -48,7 +48,7 @@
         android:layout_marginEnd="16dp"
         android:backgroundTint="#2E414A"
         android:ems="10"
-        android:hint="Email"
+        android:hint="@string/register_email"
         android:inputType="textEmailAddress"
         android:textColor="#FFFFFF"
         android:textColorHint="#96A7AF"
@@ -65,7 +65,7 @@
         android:layout_marginEnd="16dp"
         android:backgroundTint="#2E414A"
         android:ems="10"
-        android:hint="Password"
+        android:hint="@string/register_password"
         android:inputType="textPassword"
         android:textColor="#FFFFFF"
         android:textColorHint="#96A7AF"
@@ -83,7 +83,7 @@
         android:layout_marginEnd="16dp"
         android:backgroundTint="#2E414A"
         android:ems="10"
-        android:hint="Name"
+        android:hint="@string/register_name"
         android:inputType="textPersonName"
         android:textColor="#FFFFFF"
         android:textColorHint="#96A7AF"
@@ -97,7 +97,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="32dp"
-        android:text="Storyboard"
+        android:text="@string/register_storyboard"
         android:textColor="#FFFFFF"
         android:textSize="52sp"
         android:textStyle="bold"
@@ -114,7 +114,7 @@
         android:backgroundTint="#3EDA9B"
         android:paddingTop="16dp"
         android:paddingBottom="16dp"
-        android:text="Create account"
+        android:text="@string/register_create_account"
         android:textAllCaps="false"
         android:textSize="16sp"
         app:cornerRadius="12sp"
@@ -133,7 +133,7 @@
         android:backgroundTint="#286053"
         android:paddingTop="16dp"
         android:paddingBottom="16dp"
-        android:text="Back To Main"
+        android:text="@string/register_back_to_main"
         android:textAllCaps="false"
         android:textSize="16sp"
         app:cornerRadius="12sp"
