--- a/StoryBoardApp/app/src/main/res/layout/activity_write_post.xml
+++ b/StoryBoardApp/app/src/main/res/layout/activity_write_post.xml
@@ -29,7 +29,7 @@
         android:layout_width="297dp"
         android:layout_height="322dp"
         android:gravity="top"
-        android:hint="Body"
+        android:hint="@string/write_post_body"
         app:backgroundTint="@color/lightGray"
         android:inputType="textMultiLine"
         android:textColor="#96A7AF"
@@ -46,7 +46,7 @@
         android:layout_width="297dp"
         android:layout_height="80dp"
         android:layout_marginBottom="4dp"
-        android:hint="Title"
+        android:hint="@string/write_post_title"
         app:backgroundTint="@color/lightGray"
         android:inputType="textMultiLine"
         android:textColor="#96A7AF"
@@ -61,7 +61,7 @@
         android:layout_width="207dp"
         android:layout_height="55dp"
         android:fontFamily="@font/roboto"
-        android:text="New Post"
+        android:text="@string/write_post_new_post"
         android:textAppearance="@style/TextAppearance.AppCompat.Display2"
         android:textColor="#96A7AF"
         app:layout_constraintBottom_toTopOf="@+id/Title"
@@ -106,7 +106,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/btn_rounded"
-        android:text="Post"
+        android:text="@string/write_post_post"
         android:textColor="@color/lightGray"
         app:layout_constraintBottom_toBottomOf="@+id/BackImage"
         app:layout_constraintEnd_toEndOf="parent"
@@ -145,7 +145,7 @@
         android:layout_height="56dp"
         android:background="@drawable/btn_rounded"
         android:padding="2dp"
-        android:text="Nope"
+        android:text="@string/write_post_none"
         app:layout_constraintBottom_toBottomOf="@+id/BackImage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.687"
@@ -172,7 +172,7 @@
         android:id="@+id/No_im"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="No Image"
+        android:text="@string/write_post_no_image"
         android:fontFamily="@font/roboto"
         android:textColor="#96A7AF"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
